--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- jst -->
     <script type="text/javascript" src="app/jst/ui.js"></script>
     <script type="text/javascript" src="app/jst/menu.js"></script>
-    <script type="text/javascript" src="app/jst/cohesion.js"></script>
+    <script type="text/javascript" src="app/jst/deck.js"></script>
 
     <!-- parts -->
     <script type="text/javascript" src="app/parts/menu.js"></script>
