--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 
 <head>
-    <title>Lucille</title>
+    <title>KRIBSNACKS</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
 
     <!-- css -->
+    <link rel="stylesheet" href="app/styles/animate.css" />
     <link rel="stylesheet" href="app/styles/normalize.css" />
     <link rel="stylesheet" href="app/styles/kribsnacks.css" />
 
