--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- records -->
     <script type="text/javascript" src="app/records/topics.js"></script>
-    <script type="text/javascript" src="app/records/cohesion.js"></script>
+    <script type="text/javascript" src="app/records/programming.js"></script>
 
     <!-- jst -->
     <script type="text/javascript" src="app/jst/ui.js"></script>
