--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <script type="text/javascript" src="app/parts/menu.js"></script>
     <script type="text/javascript" src="app/parts/deck.js"></script>
 
+    <!-- pages -->
+    <script type="text/javascript" src="app/pages/ui.js"></script>
+
     <!-- controllers -->
     <script type="text/javascript" src="app/controllers/main.js"></script>
 
