reorg sub pages

--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
     <script type="text/javascript" src="app/records/programming.js"></script>
 
     <!-- jst -->
+    <script type="text/javascript" src="app/jst/topics.js"></script>
     <script type="text/javascript" src="app/jst/ui.js"></script>
     <script type="text/javascript" src="app/jst/menu.js"></script>
     <script type="text/javascript" src="app/jst/deck.js"></script>
+    <script type="text/javascript" src="app/jst/home.js"></script>
 
     <!-- parts -->
     <script type="text/javascript" src="app/parts/menu.js"></script>
     <script type="text/javascript" src="app/parts/deck.js"></script>
+    <script type="text/javascript" src="app/parts/topics.js"></script>
 
     <!-- pages -->
+    <script type="text/javascript" src="app/pages/home.js"></script>
     <script type="text/javascript" src="app/pages/ui.js"></script>
 
     <!-- controllers -->
